# nvim-schema-surfer

./: .gitignore  README.md
engine/: Cargo.toml
engine/src/: main.rs
lua/schema-surfer/: init.lua
plugin/: surfer.lua
syntax/: schema-surfer.vim
