[package]
name = "schema-surfer-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-native-tls", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4"
